deployed in sepolia

--- a/RentChain/foundry.toml
+++ b/RentChain/foundry.toml
@@ -3,4 +3,11 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+[profile.sepolia]
+rpc_url = "${RPC_URL}"
+private_key = "${PRIVATE_KEY}"
+etherscan_api_key = "${etherscanApiKey}"
+sender = "${WALLET_ADDRESS}"
+chain_id = 11155111
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
